# IT-Learning

./: .gitignore  README.md
IT Learning/programming/C++/DSA/singlyLL/: CMakeLists.txt
IT Learning/programming/C++/test/: CMakeLists.txt  main.cpp
IT Learning/programming/DSA/Recursion/binarySearch/: main.py
IT Learning/programming/DSA/Recursion/decimalToBinary/: main.py
IT Learning/programming/DSA/Recursion/noRecursionFactorial/: main.py
IT Learning/programming/DSA/Recursion/reverseList/: main.py
IT Learning/programming/DSA/doublyLinkedList/: main.py
IT Learning/programming/DSA/singlyLinkedList/: main.py
IT Learning/programming/DSA/tree*/: main.py
IT Learning/programming/ML/: KNeighbors Algorithm.ipynb
IT Learning/programming/ML/firstProjectIris/: main.py
IT Learning/programming/animation/bodiesSimulation/: main.py
IT Learning/programming/animation/threeBodies/: main.py
IT Learning/programming/some gpt stuff/htemel/: add-recipe.html  index.html
IT Learning/programming/some gpt stuff/htemel/JS/: scripts.js
IT Learning/programming/some python stuff/automatization/notificationCenter/: main.py
IT Learning/programming/some python stuff/dsa/stack/: main.py
IT Learning/programming/some python stuff/games/snake/: Apple.py  GameLogic.py  Snake.py  main.py
IT Learning/programming/some python stuff/games/sudoku/: main.py
IT Learning/programming/some python stuff/just programming/primes/: main.py
IT Learning/programming/some python stuff/leetcode/leetc inter1 q1/: main.py
IT Learning/programming/some python stuff/visual stuff/pong/: main.py
(+15 files in other folders)
